# MLSanity

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  sample_tabular.csv
mlsanity/: cli.py  engine.py  types.py
mlsanity/checks/: corruption.py  duplicates.py  imbalance.py  label_hints.py  leakage.py  near_duplicates.py  schema.py
mlsanity/loaders/: image_loader.py  tabular_loader.py
mlsanity/reporting/: compare_html_report.py  compare_json_report.py  compare_terminal.py  html_report.py  json_report.py  quality_gates.py  scoring.py  terminal.py
mlsanity/reporting/templates/: compare_report.html.j2  report.html.j2
report_template/: index.html  tailwind.config.ts
report_template/src/: App.tsx  index.css
report_template/src/components/dashboard/: ChecksPage.tsx  CodeBlock.tsx  DistributionPage.tsx  HealthGauge.tsx  OverviewPage.tsx  StatCard.tsx  StatusBadge.tsx
report_template/src/data/: mockReport.ts  runtimeReport.ts
report_template/src/pages/: Index.tsx
tests/: test_compare.py  test_engine.py  test_label_hints.py  test_quality_gates.py
